ziplinter/src/snapshots/ziplinter__test__dd.zip.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "contents": [
    {
      "central": {
        "comment": "",
        "compressed_size": 24,
        "crc32": 2732840659,
        "creator_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "disk_nbr_start": 0,
        "external_attrs": 0,
        "extra": [],
        "flags": 8,
        "header_offset": 0,
        "internal_attrs": 0,
        "method": "Deflate",
        "mode": 438,
        "modified": "2011-02-02T13:06:20Z",
        "name": "filename",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uncompressed_size": 25
      },
      "local": {
        "accessed": null,
        "compressed_size": 0,
        "crc32": 0,
        "created": null,
        "extra": [],
        "flags": 8,
        "gid": null,
        "header_offset": 0,
        "method": "Deflate",
        "method_specific": "None",
        "mode": 0,
        "modified": "2011-02-02T13:06:20Z",
        "name": "filename",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uid": null,
        "uncompressed_size": 0
      }
    }
  ],
  "encoding": "Utf8",
  "eocd": {
    "dir": {
      "inner": {
        "comment": [],
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 1,
        "directory_offset": 78,
        "directory_records": 1,
        "directory_size": 54,
        "disk_nbr": 0
      },
      "offset": 132
    },
    "dir64": null,
    "global_offset": 0
  },
  "parsed_ranges": [
    {
      "contains": "end of central directory record",
      "end": 154,
      "start": 132
    },
    {
      "contains": "central directory header",
      "end": 132,
      "filename": "filename",
      "start": 78
    },
    {
      "contains": "local file header",
      "end": 38,
      "filename": "filename",
      "start": 0
    },
    {
      "contains": "file data",
      "end": 62,
      "filename": "filename",
      "start": 38
    }
  ],
  "size": 154
}
