ziplinter/src/snapshots/ziplinter__test__found-me-bzip2.zip.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "contents": [
    {
      "central": {
        "comment": "",
        "compressed_size": 102,
        "crc32": 1745162907,
        "creator_version": {
          "host_system": "MsDos",
          "version": 63
        },
        "disk_nbr_start": 0,
        "external_attrs": 32,
        "extra": [
          10,
          0,
          32,
          0,
          0,
          0,
          0,
          0,
          1,
          0,
          24,
          0,
          127,
          108,
          181,
          192,
          114,
          80,
          218,
          1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0
        ],
        "flags": 0,
        "header_offset": 0,
        "internal_attrs": 0,
        "method": "Bzip2",
        "mode": 438,
        "modified": "2024-01-26T16:14:35.046003100Z",
        "name": "found-me.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 46
        },
        "uncompressed_size": 100000
      },
      "local": {
        "accessed": null,
        "compressed_size": 102,
        "crc32": 1745162907,
        "created": null,
        "extra": [],
        "flags": 0,
        "gid": null,
        "header_offset": 0,
        "method": "Bzip2",
        "method_specific": "None",
        "mode": 0,
        "modified": "2024-01-26T17:14:36Z",
        "name": "found-me.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 46
        },
        "uid": null,
        "uncompressed_size": 100000
      }
    }
  ],
  "encoding": "Utf8",
  "eocd": {
    "dir": {
      "inner": {
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 1,
        "directory_offset": 144,
        "directory_records": 1,
        "directory_size": 94,
        "disk_nbr": 0
      },
      "offset": 238
    },
    "dir64": null,
    "global_offset": 0
  },
  "parsed_ranges": [
    {
      "contains": "end of central directory record",
      "end": 260,
      "start": 238
    },
    {
      "contains": "central directory header",
      "end": 238,
      "filename": "found-me.txt",
      "start": 144
    },
    {
      "contains": "local file header",
      "end": 42,
      "filename": "found-me.txt",
      "start": 0
    },
    {
      "contains": "file data",
      "end": 144,
      "filename": "found-me.txt",
      "start": 42
    }
  ],
  "size": 260
}
