ziplinter/src/snapshots/ziplinter__test__found-me-zstd.zip.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "contents": [
    {
      "central": {
        "comment": "",
        "compressed_size": 37,
        "crc32": 1745162907,
        "creator_version": {
          "host_system": "MsDos",
          "version": 63
        },
        "disk_nbr_start": 0,
        "external_attrs": 128,
        "extra": [
          10,
          0,
          32,
          0,
          0,
          0,
          0,
          0,
          1,
          0,
          24,
          0,
          178,
          67,
          138,
          46,
          12,
          84,
          218,
          1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0
        ],
        "flags": 0,
        "header_offset": 0,
        "internal_attrs": 0,
        "method": "Zstd",
        "mode": 438,
        "modified": "2024-01-31T06:10:25.800491400Z",
        "name": "found-me.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uncompressed_size": 100000
      },
      "local": {
        "accessed": null,
        "compressed_size": 37,
        "crc32": 1745162907,
        "created": null,
        "extra": [],
        "flags": 0,
        "gid": null,
        "header_offset": 0,
        "method": "Zstd",
        "method_specific": "None",
        "mode": 0,
        "modified": "2024-01-31T07:10:26Z",
        "name": "found-me.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uid": null,
        "uncompressed_size": 100000
      }
    }
  ],
  "encoding": "Utf8",
  "eocd": {
    "dir": {
      "inner": {
        "comment": [],
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 1,
        "directory_offset": 79,
        "directory_records": 1,
        "directory_size": 94,
        "disk_nbr": 0
      },
      "offset": 173
    },
    "dir64": null,
    "global_offset": 0
  },
  "parsed_ranges": [
    {
      "contains": "end of central directory record",
      "end": 195,
      "start": 173
    },
    {
      "contains": "central directory header",
      "end": 173,
      "filename": "found-me.txt",
      "start": 79
    },
    {
      "contains": "local file header",
      "end": 42,
      "filename": "found-me.txt",
      "start": 0
    },
    {
      "contains": "file data",
      "end": 79,
      "filename": "found-me.txt",
      "start": 42
    }
  ],
  "size": 195
}
