ziplinter/src/snapshots/ziplinter__test__go-with-datadesc-sig.zip.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "contents": [
    {
      "central": {
        "comment": "",
        "compressed_size": 4,
        "crc32": 2117232040,
        "creator_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "disk_nbr_start": 0,
        "external_attrs": 0,
        "extra": [],
        "flags": 8,
        "header_offset": 0,
        "internal_attrs": 0,
        "method": "Store",
        "mode": 438,
        "modified": "1970-01-01T00:00:00Z",
        "name": "foo.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uncompressed_size": 4
      },
      "local": {
        "accessed": null,
        "compressed_size": 0,
        "crc32": 0,
        "created": null,
        "extra": [],
        "flags": 8,
        "gid": null,
        "header_offset": 0,
        "method": "Store",
        "method_specific": "None",
        "mode": 0,
        "modified": "1970-01-01T00:00:00Z",
        "name": "foo.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uid": null,
        "uncompressed_size": 0
      }
    },
    {
      "central": {
        "comment": "",
        "compressed_size": 4,
        "crc32": 77771753,
        "creator_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "disk_nbr_start": 0,
        "external_attrs": 0,
        "extra": [],
        "flags": 8,
        "header_offset": 57,
        "internal_attrs": 0,
        "method": "Store",
        "mode": 438,
        "modified": "1970-01-01T00:00:00Z",
        "name": "bar.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uncompressed_size": 4
      },
      "local": {
        "accessed": null,
        "compressed_size": 0,
        "crc32": 0,
        "created": null,
        "extra": [],
        "flags": 8,
        "gid": null,
        "header_offset": 0,
        "method": "Store",
        "method_specific": "None",
        "mode": 0,
        "modified": "1970-01-01T00:00:00Z",
        "name": "bar.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uid": null,
        "uncompressed_size": 0
      }
    }
  ],
  "encoding": "Utf8",
  "eocd": {
    "dir": {
      "inner": {
        "comment": [],
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 2,
        "directory_offset": 114,
        "directory_records": 2,
        "directory_size": 106,
        "disk_nbr": 0
      },
      "offset": 220
    },
    "dir64": null,
    "global_offset": 0
  },
  "parsed_ranges": [
    {
      "contains": "end of central directory record",
      "end": 242,
      "start": 220
    },
    {
      "contains": "central directory header",
      "end": 167,
      "filename": "foo.txt",
      "start": 114
    },
    {
      "contains": "central directory header",
      "end": 220,
      "filename": "bar.txt",
      "start": 167
    },
    {
      "contains": "local file header",
      "end": 37,
      "filename": "foo.txt",
      "start": 0
    },
    {
      "contains": "file data",
      "end": 41,
      "filename": "foo.txt",
      "start": 37
    },
    {
      "contains": "local file header",
      "end": 94,
      "filename": "bar.txt",
      "start": 57
    },
    {
      "contains": "file data",
      "end": 98,
      "filename": "bar.txt",
      "start": 94
    }
  ],
  "size": 242
}
